@@ -16,6 +16,7 @@ This version addresses the following issues:
 
 961343 - Use DDA for triangle edges
 970915 - Matrix Stack test failed
+980874 - Texture Edge Clamp test failed.
 
 
 Version 0.78
